<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/addTitle"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/mainfont"
        android:background="@color/MainColor"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/urlArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/urlForm"
            android:fontFamily="@font/mainfont"
            android:textColorHint="@color/rightgrey"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/nicknameArea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/nicknameHint"
            android:fontFamily="@font/mainfont"
            android:textColorHint="@color/rightgrey"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/cancle"
            android:fontFamily="@font/mainfont"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save"
            android:fontFamily="@font/mainfont"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />


</LinearLayout>